File login created

--- a/login.html
+++ b/login.html
@@ -1,5 +1,10 @@
 <html>
 <body>
 <h1>Login Form</h1>
+<form action="">
+Entername:<input type="text">
+Enterpassword:<input type="text">
+<input tyoe="Submit" value="Submit">
+</form>
 </body>
 </html>
